# pylingdocs-gui

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  RELEASING.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
etc/: CITATION.cff
src/pylingdocs_gui/: __init__.py  cli.py  editor.html  editor.py
vue/: webpack.config.js
vue/src/: index.js
