[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = A graphical editor for pylingdocs.
keywords =
    cldf
    linguistics
long_description = file: README.md
long_description_content_type = text/markdown
name = pylingdocs_gui
project_urls =
    Bug Tracker = https://github.com/fmatter/pylingdocs-gui/issues
url = https://github.com/fmatter/pylingdocs-gui
version = 0.0.2.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    colorlog
    click
    flask
    flask_cors
    pylingdocs


[options.entry_points]
console_scripts =
    pylingdocs-gui=pylingdocs_gui.cli:main


[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.7
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
    flake8
    twine
    jinja2
publishing =
    twine
    wheel

[options.packages.find]
include = pylingdocs_gui, pylingdocs_gui.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = pylingdocs_gui
src_paths = pylingdocs_gui,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    pylingdocs_gui

[coverage:report]
show_missing = true